# MinHash

./: CMakeLists.txt
Articles/: article_1.txt  article_10.txt  article_100.txt  article_1000.txt  article_101.txt  article_102.txt  article_103.txt  article_104.txt  article_105.txt  article_106.txt  article_107.txt  article_108.txt  article_109.txt  article_11.txt  article_110.txt  article_111.txt  article_112.txt  article_113.txt  article_114.txt  article_115.txt  article_116.txt  article_117.txt  article_118.txt  article_119.txt  article_12.txt  article_120.txt  article_121.txt  article_122.txt  article_123.txt  article_124.txt  article_125.txt  article_126.txt  article_127.txt  article_128.txt  article_129.txt  article_13.txt  article_130.txt  article_131.txt  article_132.txt  article_133.txt  (+960 more)
HW3_LSHAndResultsHandling/: main.cpp
include/: ArticleGenerator.h  Jaccard.h  LocalSensitiveHash.h  MinHash.h  matplotlibcpp.h  resultHandling.h
src/: ArticleGenerator.cpp  LocalSensitiveHash.cpp  main.cpp  resultHandling.cpp
